# GodotLighter

./: .gitignore  .sconsign.dblite  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
cmake/: CMakeLists.txt  demos.cmake  examples.cmake  extension-file.cmake  godot.cmake  sqlighter.cmake  version.cmake
cmake/core/: bin.cmake  env.cmake
demos/: .gitignore
demos/4.3/error_handling/: main.gd  main.tscn  project.godot
demos/4.3/migration/: bin
demos/4.3/versions/: main.gd  main.tscn  my.db  project.godot
docs/: Example.md  GLighter.md  SQLMigrationNode.md  SQLNode.md
docs/Features/: Migrations.md
docs/Guides/: ErrorHandling.md
docs/Migration/: SQLMigrationNode.md  SQLMigrationScript.md
docs/Objects/: SQLErrorInfo.md  SQLErrors.md  SQLStmt.md
docs/SQL/: SQLCommand.md  SQLCreateTable.md  SQLDelete.md  SQLDirect.md  SQLDrop.md  SQLInsert.md  SQLSelect.md  SQLUpdate.md
docs/SQL/Clauses/: FromClause.md  LimitClause.md  OrClause.md  OrderByClause.md  SetClause.md  WhereClause.md
docs/Tutorials/: Migrations.md
examples/4.3/error_handling/: main.gd  project.godot
examples/4.3/migration/: icon.svg.import  project.godot
examples/4.3/simple/: GameConfig.gd  Main.tscn  icon.svg.import  main.gd  project.godot  test_scene.gd  test_scene.tscn
examples/4.3/simple/behavior/: abstract_behavior.gd  ai_behavior.gd  player_behavior.gd  shadow_behavior.gd
examples/4.3/simple/objects/: actor.gd  actor.tscn  arena.gd  arena.tscn
examples/4.3/simple/sql/: actor_dao.gd
examples/4.3/simple/sql/init/: db_init.tscn  init.gd  insert_players.gd
examples/4.3/simple/ui/: battle_field.gd  battle_field.tscn  score_table.gd  score_table.tscn  table_record.gd  table_record.tscn
examples/4.3/versions/: main.gd  project.godot
resources/: godotlighter.gdextension  godotlighter.gdextension.full
src/: GLighter.cpp  GLighter.h  SQL.cpp  SQL.h  SQLNode.cpp  SQLNode.h  godotlighter_version.h.in  register_types.cpp  register_types.h
src/Exceptions/: GLighterException.cpp  GLighterException.h
src/Migration/: MigrationNode.cpp  MigrationNode.h  SQLMigrationNode.cpp  SQLMigrationNode.h  SQLMigrationScript.cpp  SQLMigrationScript.h
src/Objects/: GLighterStmt.cpp  GLighterStmt.h  SQLErrorInfo.cpp  SQLErrorInfo.h  SQLErrors.cpp  SQLErrors.h  SQLStmt.cpp  SQLStmt.h
src/SQL/: SQLCommand.cpp  SQLCommand.h  SQLCreateTable.cpp  SQLCreateTable.h  SQLDelete.cpp  SQLDelete.h  SQLDirect.cpp  SQLDirect.h  SQLDrop.cpp  SQLDrop.h  SQLInsert.cpp  SQLInsert.h  SQLSelect.cpp  SQLSelect.h  SQLUpdate.cpp  SQLUpdate.h
src/SQL/Clause/: FromClause.h  LimitClause.h  OrClause.h  OrderByClause.h  SetClause.h  WhereClause.h
src/Utils/: errors.cpp  errors.h  gd_class.h  gd_path.h  helpers.cpp  helpers.h  macros.cpp.h  macros.h  types.cpp  types.h
